<resources>
    <string name="app_name">taskmaster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_hint">Task Title</string>
    <string name="add_due_date">+ Due Date</string>
    <string name="add_due_time">+ Due Time</string>
    <string name="add_duration">+ Duration</string>
    <string name="add_priority">+ Priority</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="friday">Friday</string>
    <string name="one_week">1 Week</string>
    <string name="allow_segments">Allow segments</string>

    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="duration">Duration</string>
    <string name="priority">Priority</string>
    <string name="divisible_unit_text">Minimum segment length</string>
    <string name="divisible_unit_note">If selected, plans you generate may break up longer tasks into smaller segments to accommodate the time you have.</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sort_filter">Sort</string>

    <string name="list">List</string>
    <string name="plan">Plan</string>

    <string name="no_info">No due date or duration  :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="duration_hour_options">
        <item name="hours">Hours</item>
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>

    </string-array>

    <string-array name="duration_minute_options">
        <item name="minutes">Minutes</item>
        <item name="00">00</item>
        <item name="15">15</item>
        <item name="30">30</item>
        <item name="45">45</item>
    </string-array>

    <string-array name="divisible_unit_hour_options">
        <item name="hours">Hours</item>
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
    </string-array>

    <string-array name="divisible_unit_minute_options">
        <item name="minutes">Minutes</item>
        <item name="00">00</item>
        <item name="15">15</item>
        <item name="30">30</item>
        <item name="45">45</item>
    </string-array>

    <string name="working">Working:</string>
    <string name="time_to_work">How much time do you have to spend today?</string>
    <string name="clear">Clear</string>
    <string name="make_plan">Make Plan</string>

    <string name="uh_oh">Uh-oh</string>
    <string name="too_many_tasks_message">It looks like you have more to do than you allotted time for!</string>
    <string name="add_time">Add Time</string>
    <string name="adjust_tasks">Adjust Tasks</string>
    <string name="task_total_duration">Task Total:</string>
    <string name="plan_total_duration">Work Time:</string>
    <string name="add_tasks">Add Task</string>
    <string name="out_of_time">You have no planned tasks left! \nTap here make a new plan</string>
    <string name="add_more_tasks_message">You have some extra time! \nTap here to add more to your plan</string>
    <string name="completion_type">Completion Type</string>
    <string name="task_type_completed_message">Full planned time or segment completed?</string>
    <string name="full_time">Full Time</string>
    <string name="segment">Segment</string>
    <string name="planned">planned</string>
    <string name="add_task_explanation">No tasks will fit! Try adding some in the list view</string>
    <string name="plan_how_long">How much time do you have?  e.g. 2h 30m</string>
    <string name="title_activity_add__edit__task_1">Add_Edit_Task_1</string>

    <string name="task_title_question">What do you want to do?</string>
    <string name="duedate_question">When should it be done?</string>
    <string name="duetime_question">What time?</string>
    <string name="duration_question">How long will it take?</string>
    <string name="segment_question">In what length segments?</string>
    <string name="skip">Skip</string>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="midnight">Midnight</string>
    <string name="title_activity_task_info">TaskInfoActivity</string>

    <string name="left">left</string>
    <string name="dueDate_and_duration">Due Date and Duration</string>
    <string name="sort_by">Sort By</string>
    <string name="new_plan">New Plan</string>

    <string name="remove_deleted_tasks">Erase Deleted Tasks</string>
    <string name="title">Title</string>

    <string name="segment_info">What\'s a segment?</string>
    <string name="segment_description">A segment is the minimum length of time you can work in one sitting on this task. E.g. it might take 20 hours to clean out the garage, but you can work on it in 30 minute segments.</string>
</resources>
