<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center_horizontal"
              tools:context="com.student.john.taskmanager2.addEditTaskFragments.AddDueTimeFragment">

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/duetime_question"/>

    <GridLayout
        android:layout_weight="0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        android:paddingTop="20dp">

        <ToggleButton
            android:id="@+id/topLeftDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:textOff="@string/morning"
            android:textOn="@string/morning"
            />

        <ToggleButton
            android:id="@+id/topRightDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:textOff="@string/afternoon"
            android:textOn="@string/afternoon"
            />

        <ToggleButton
            android:id="@+id/bottomLeftDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:elevation="0dp"
            android:textOff="@string/evening"
            android:textOn="@string/evening"/>

        <ToggleButton
            android:id="@+id/bottomRightDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:textOff="@string/midnight"
            android:textOn="@string/midnight"
            />


    </GridLayout>

    <Button
        android:layout_weight="0.1"
        android:id="@+id/dueTime_skip_button"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="18dp"

        android:text="@string/skip"/>
</LinearLayout>
