<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.student.john.taskmanager2.DueDatePickerFragment">

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        >

        <ToggleButton
            android:id="@+id/topLeftDueDateButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOn="@string/today"
            android:textOff="@string/today"
            />

        <ToggleButton
            android:id="@+id/topRightDueDateButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOn="@string/tomorrow"
            android:textOff="@string/tomorrow"
            />

        <ToggleButton
            android:id="@+id/bottomLeftDueDateButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOn="@string/friday"
            android:textOff="@string/friday"
            />

        <ToggleButton
            android:id="@+id/bottomRightDueDateButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOn="@string/one_week"
            android:textOff="@string/one_week"
            />


    </GridLayout>

    <DatePicker
        android:id="@+id/dueDate_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minDate="10/05/2017"
        android:scaleX="0.75"
        android:scaleY="0.75">

    </DatePicker>


</LinearLayout>
