<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              tools:context="com.student.john.taskmanager2.addEditTaskViews_Presenters.DueDatePickerFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        android:paddingTop="20dp">

        <ToggleButton
            android:id="@+id/topLeftDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:textOff="@string/today"
            android:textOn="@string/today"
            />

        <ToggleButton
            android:id="@+id/topRightDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:textOff="@string/tomorrow"
            android:textOn="@string/tomorrow"
            />

        <ToggleButton
            android:id="@+id/bottomLeftDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:elevation="0dp"
            android:textOff="@string/friday"
            android:textOn="@string/friday"/>

        <ToggleButton
            android:id="@+id/bottomRightDueTimeButton"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:textOff="@string/one_week"
            android:textOn="@string/one_week"
            />


    </GridLayout>

    <TimePicker
        android:id="@+id/dueTime_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:headerBackground="@android:color/darker_gray"
        >

    </TimePicker>


</LinearLayout>
