<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
             tools:context="com.student.john.taskmanager2.CompletionDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/task_type_completed_message"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/full_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_time"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/segment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segment"/>
    </LinearLayout>

</LinearLayout>
