<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
             tools:context="com.student.john.taskmanager2.NotEnoughTimeDialogFragment">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/too_many_tasks_message"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/task_total_duration"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/task_total_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="5h"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/plan_total_duration"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/plan_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="4h"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/add_time_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/add_time"/>

        <Button
            android:id="@+id/adjust_tasks_button"
            android:layout_marginLeft="5dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/adjust_tasks"/>

    </LinearLayout>

</LinearLayout>
