<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="20dp"
             tools:context="com.student.john.taskmanager2.SortDialogFragment">



        <RadioGroup
            android:id="@+id/sort_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RadioButton
                android:id="@+id/sort_by_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/sort_by_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/sort_by_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dueDate_and_duration"
                android:textSize="16sp"/>

        </RadioGroup>


</LinearLayout>
