<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.student.john.taskmanager2.TaskInfoActivity"
    tools:showIn="@layout/activity_task_info">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/text_margin"-->
        <!--android:text="@string/large_text"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_time"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
